# readsprofile

./: README.md
Client/: CMakeLists.txt  main.cpp
Client/Connection/: TCPClient.cpp  TCPClient.h
Client/Requests/: TypeRequests.cpp  TypeRequests.h
Client/utils/: utils.cpp  utils.h
Server/: CMakeLists.txt  main.cpp
Server/Connection/: TCP.cpp  TCP.h  TCPClient.cpp  TCPClient.h
Server/DataBase/: DB_Manager.cpp  DB_Manager.h  DataBase.json
Server/TypeRequests/: TypeRequests.cpp  TypeRequests.h
Server/utils/: utils.cpp  utils.h
